--- a/css/style.css
+++ b/css/style.css
@@ -12,31 +12,27 @@
   left: 15px;
   width: 100px;
   height: auto;
-  z-index: 3;
+  z-index: 100;
 }
-
-/*.logo a:hover {
-  background-image:url("images/studiomosaiclogo_hover.svg")
-}*/
 
 @media (max-width: 550px) and (min-width: 0px) {
   .logo {
     position: absolute;
     top: 15px;
-    left: 42%;
+    left: 15px;
     width: 65px;
     height: auto;
-    z-index: 3;
+    z-index: 100;
   }
 }
 
 @media (max-width: 550px) and (min-width: 0px) {
   .mobile-logo {
     position: absolute;
-    top: 25px;
-    left: 37%;
-    width: 110px;
-    z-index: 3;
+    top: 15px;
+    left: 15px;
+    width: 65px;
+    z-index: 100;
   }
 }
 
@@ -48,7 +44,7 @@
     right: 15px;
     width: 60px;
     height: auto;
-    z-index: 3;
+    z-index: 100;
   }
 }
 
@@ -218,6 +214,8 @@
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: landscape) {
 
+
+
   .mobile-work{
     margin: auto;
     position: absolute;
@@ -283,10 +281,10 @@
 
   .mobile-logo {
     position: absolute;
-    top: 25px;
-    left: 41%;
-    width: 110px;
-    z-index: 3;
+    top: 15px;
+    left: 15p;
+    width: 65px;
+    z-index: 100;
   }
 
   .studio{
@@ -355,7 +353,7 @@ color: rgb(88, 88, 88);
 .studio {
   font-family: 'rasmusregular';
   font-size: 78px;
-  z-index:0;
+  z-index:3;
   width: 600px;
   height: 100px;
   position: fixed;
@@ -585,7 +583,6 @@ color: rgb(88, 88, 88);
   top:20%;
   bottom: 0;
   margin: auto;
-  min-width: 50%;
   min-height: 70%;
   }
   #wrap {
